k8s/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task
  labels:
    app: task-manager
