k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskmanager-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: taskmanager

  template:
    metadata:
      labels:
        app: taskmanager

    spec:
      containers:
      - name: taskmanager

        image: 771358505960.dkr.ecr.ap-south-1.amazonaws.com/task-manager:latest

        ports:
        - containerPort: 8080
