k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
  namespace: default
  labels:
    app: task-manager
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
