k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: taskmanager-service

spec:
  type: ClusterIP

  selector:
    app: taskmanager

  ports:
  - port: 80
    targetPort: 8080
