k8s/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
  - port: 3306
    targetPort: 3306
