k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-Ingress
  Namespace: task
  annotations: 
    owner: "durga"
    project: "task-manager-app"
spec: 
  ingressClassName: task-manager-ingress
  rules: 
  - http: 
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: my-Service
            port: 
              number: 80
